# sheldon

./: .gitignore  .rustfmt.toml  .travis.yml  404.html  CNAME  Cargo.toml  Command-line-interface.html  Configuration.html  Cross.toml  Examples.html  Getting-started.html  Installation.html  Introduction.html  README.md  RELEASES.html  RELEASES.md  build.rs  index.html  onedoc.toml  print.html  rustfmt.toml  searchindex.js  searchindex.json
.github/workflows/: build.yaml  docs.yaml  release.yaml
ci/: before_deploy.sh  coverage.sh  install.sh  script.sh
ci/docker/: Dockerfile.armv7-unknown-linux-gnueabihf  Dockerfile.armv7-unknown-linux-musleabihf  Dockerfile.x86_64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-musl  install-git.sh
completions/: sheldon.bash  sheldon.zsh
docs/: Configuration.md  README.hbs  README_TEMPLATE.md  book.toml  plugins.example.toml
docs/src/: Command-line-interface.md  Configuration.md  Examples.md  Getting-started.md  Installation.md  Introduction.md  RELEASES.md  SUMMARY.md
scripts/: coverage.sh
src/: _macros.rs  app.rs  build.rs  cli.rs  config.rs  context.rs  edit.rs  editor.rs  error.rs  lib.rs  lock.rs  log.rs  logging.rs  macros.rs  main.rs  plugins.toml  util.rs
src/cli/: color_choice.rs  mod.rs  raw.rs  tests.rs
src/cli/testdata/: raw_opt_add_help.golden  raw_opt_help.golden  raw_opt_init_help.golden  raw_opt_lock_help.golden  raw_opt_source_help.golden  raw_opt_subcommand_required.golden
src/config/: clean.rs  edit.rs  file.rs  mod.rs  normalize.rs  profile.rs
src/configs/: bash.plugins.toml
src/context/: message.rs  mod.rs  tests.rs
src/lock/: clean.rs  file.rs  mod.rs  plugin.rs  script.rs
src/lock/source/: git.rs  local.rs  mod.rs  remote.rs
src/testdata/: raw_opt_help.golden  raw_opt_source_help.golden
src/testdata/cli/: raw_opt_add_help.golden  raw_opt_help.golden  raw_opt_init_help.golden  raw_opt_lock_help.golden  raw_opt_source_help.golden  raw_opt_subcommand_required.golden
src/util/: build.rs  git.rs  mod.rs  mutex.rs  path.rs  path_ext.rs  temp.rs
tests/: case.pest  config.rs  lib.rs
tests/cases/: clean  clean_permission_denied  directories  directories_incremental  directory_structure  empty  git  git_bad_url  git_branch  git_tag  github_bad_reinstall  github_bad_url  github_branch  github_git  github_https  github_submodule  github_tag  hooks  inline  override_config_file  override_config_file_missing  override_data_dir  override_lock_file  profiles
tests/cases/empty/: lock.stderr  source.stderr
tests/cases/git/: lock.stderr  plugins.toml  source.stdout
tests/cases/git_bad_url/: lock.stderr  plugins.toml  source.stderr
tests/cases/git_branch/: lock.stderr  plugins.toml  source.stderr
tests/cases/git_tag/: lock.stderr  plugins.toml
tests/helpers/: dirs.rs  mod.rs  process.rs
tests/testdata/clean/: lock.stderr  source.stderr
tests/testdata/clean_permission_denied/: lock.stderr  source.stderr
tests/testdata/deprecated_directories/: source.stderr
tests/testdata/deprecated_get_filter/: plugins.toml  source.stderr
tests/testdata/directories/: lock.stderr  plugins.toml  source.stderr  source.stdout
tests/testdata/directories_default/: lock.stderr  source.stderr
tests/testdata/directories_incremental/: lock.stderr  plugins.toml  source.stderr
tests/testdata/directories_old/: lock.stderr  source.stderr  source.stdout
tests/testdata/directories_xdg_default/: source.stderr
tests/testdata/directories_xdg_from_env/: lock.stderr  source.stderr  source.stdout
tests/testdata/empty/: lock.stderr
tests/testdata/github_bad_reinstall/: lock.stderr  plugins.toml
tests/testdata/github_bad_url/: lock.stderr  source.stderr
tests/testdata/github_branch/: lock.stderr  source.stderr
tests/testdata/github_https/: lock.stderr
tests/testdata/github_submodule/: lock.stderr  plugins.toml  source.stderr  source.stdout
tests/testdata/github_tag/: lock.stderr  source.stderr  source.stdout
tests/testdata/hooks/: lock.stderr  plugins.toml  source.stderr  source.stdout
tests/testdata/inline/: lock.stderr  plugins.toml  source.stderr  source.stdout
tests/testdata/override_config_file/: lock.stderr  source.stderr
tests/testdata/override_config_file_missing/: lock.stderr  stderr
tests/testdata/override_data_dir/: lock.stderr  source.stderr
tests/testdata/profiles/: lock.stderr  plugins.toml  source.stderr
tools/gen-readme/: Cargo.toml
tools/gen-readme/src/: main.rs
tools/generate-readme/: Cargo.toml
tools/generate-readme/src/: main.rs
