[package]
name = "sheldon"
version = "0.7.3"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
rust-version = "1.70"
description = "Fast, configurable, shell plugin manager."
documentation = "https://sheldon.cli.rs"
readme = "README.md"
repository = "https://github.com/rossmacarthur/sheldon"
license = "MIT OR Apache-2.0"
keywords = ["shell", "plugin", "manager", "zsh", "bash"]
categories = ["command-line-utilities"]
build = "build.rs"
include = ["src/**/*", "LICENSE-*", "README.md", "build.rs"]

[profile.release]
strip = "symbols"

[profile.compact]
inherits = "release"
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/sheldon-{ version }-{ target }.tar.gz"

[dependencies]
anyhow = "1.0.75"
casual = "0.2.0"
clap_complete = "4.4.4"
constcat = "0.4.0"
curl = "0.4.44"
fmutex = "0.1.0"
git2 = { version = "0.18.1", features = ["vendored-libgit2"] }
globwalk = "0.8.1"
home = "0.5.5"
indexmap = { version = "2.1.0", features = ["rayon", "serde"] }
itertools = "0.12.0"
maplit = "1.0.2"
once_cell = "1.18.0"
rayon = "1.8.0"
regex-macro = "0.2.0"
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
toml = { version = "0.8.8", features = ["preserve_order"] }
toml_edit = "0.21.0"
upon = { version = "0.8.0", default-features = false, features = ["serde", "filters"] }
url = { version = "2.4.1", features = ["serde"] }
walkdir = "2.4.0"
which = { version = "5.0.0", default-features = false }
yansi = "0.5.1"

[dependencies.clap]
version = "4.4.8"
default-features = false
features = [
    "std", "help", "usage", "error-context", "suggestions", # default excluding "color"
    "cargo", "env", "derive"                                # optional
]

[build-dependencies]
anyhow = "1.0.75"

[dev-dependencies]
goldie = "0.4.3"
pretty_assertions = "1.4.0"
tempfile = "3.8.1"
