[package]
name = "generate-readme"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
handlebars = "3.5.2"
maplit = "1.0.2"
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.0"
pulldown-cmark-toc = "0.1.1"
regex-macro = "0.1.1"
